<resources>
    <string name="app_name">Challenge Chapter 4</string>
    <string name="example_note">Belajar Android Kotlin Setiap Pagi 2 Jam Setelah Sarapan dan Setelah Dzuhur</string>
    <string name="delete">Delete</string>
    <string name="titleNotes">Belajar Android Kotlin</string>
    <string name="dateNotes">Kam, 7 April 2022</string>
    <string name="logout">Logout</string>
    <string name="welcome">Selamat Datang Tegar!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="judul_login">Halaman Login</string>
    <string name="image">image</string>
    <string name="username">Username</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="halaman_register">Halaman Register</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_konfirmasi_password">Masukan Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="fab">fab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukan_judul">Masukan Judul</string>
    <string name="masukan_catatan">Masukan Catatan</string>
    <string name="input">Input</string>
    <string name="input_data">Input Data</string>
    <string name="edit">Edit</string>
    <string name="edit_data">Edit Data</string>
</resources>