<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvDate"
        android:text="@string/dateNotes"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTitleNote"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintRight_toLeftOf="@id/iv_update"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/titleNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDescNote"
        app:layout_constraintTop_toBottomOf="@id/tvTitleNote"
        app:layout_constraintStart_toStartOf="@id/tvTitleNote"
        app:layout_constraintEnd_toStartOf="@id/iv_update"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/example_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_update"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_marginTop="8dp"
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>